fixing spacing issues

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -89,7 +89,6 @@ select {
     margin-bottom: 10px;
     margin-right: 8px;
     padding: 4px;
-    margin-top: -4px;
   }
 
 input[placeholder=required] {
